# src/main/java/br/com/rockgustavo/imobiliaria/painel/api/FunilResponse.java
@@ -1,0 +1,4 @@
+package br.com.rockgustavo.imobiliaria.painel.api;
+
+public record FunilResponse(long lead, long prospect, long cliente, long clienteInativo) {
+}
